<resources>
    <string name="app_name">Formulario</string>
    <string name="nombre">Nombre</string>
    <string name="hint_nombre">Digite el nombre</string>
    <string name="correo">Correo</string>
    <string name="hint_correo">Digite el correo</string>
    <string name="tel">Telefono</string>
    <string name="hint_tel">Digite el Telefono</string>
    <string name="masculino">Masculino</string>
    <string name="femenino">Femenino</string>
    <string name="hobbies">Hobbies:</string>
    <string name="hobby1">Leer</string>
    <string name="hobby2">Ver series</string>
    <string name="hobby3">Ver películas</string>
    <string name="hobby4">Practicar deporte</string>
    <string name="genero">Género:</string>
    <string name="ciudad">Ciudad de nacimiento:</string>
    <string name="fecha">Fecha de nacimiento:</string>
    <string name="boton">OK</string>
    <string name="action_settings">Settings</string>




    <string-array name="ciudades">
        <item>Aguachica - Cesar</item>
        <item>Apartadó - Antioquia</item>
        <item>Arauca</item>
        <item>Armenia - Quindío</item>
        <item>Barrancabermeja - Santander</item>
        <item>Barranquilla - Atlántico</item>
        <item>Bello - Antioquia</item>
        <item>Bogotá - Distrito Capital</item>
        <item>Bucaramanga - Santander</item>
        <item>Buenaventura - Valle del Cauca</item>
        <item>Buga - Valle del Cauca</item>
        <item>Cali - Valle del Cauca</item>
        <item>Cartago - Valle del Cauca</item>
        <item>Cartagena - Bolívar</item>
        <item>Caucasia - Antioquia</item>
        <item>Cereté - Córdoba</item>
        <item>Chia - Cundinamarca</item>
        <item>Ciénaga - Magdalena</item>
        <item>Cúcuta - Norte de Santander</item>
        <item>Dosquebradas - Risaralda</item>
        <item>Duitama - Boyacá</item>
        <item>Envigado - Antioquia</item>
        <item>Facatativá - Cundinamarca</item>
        <item>Florencia - Caqueta</item>
        <item>Floridablanca - Santander</item>
        <item>Fusagasugá - Cundinamarca</item>
        <item>Girardot - Cundinamarca</item>
        <item>Girón - Santander</item>
        <item>Ibagué - Tolima</item>
        <item>Ipiales - Nariño</item>
        <item>Itagüí - Antioquia</item>
        <item>Jamundí - Valle del Cauca</item>
        <item>Lorica - Córdoba</item>
        <item>Los Patios - Norte de Santander</item>
        <item>Magangué - Bolivar</item>
        <item>Maicao - Guajira</item>
        <item>Malambo - Atlántico</item>
        <item>Manizales - Caldas</item>
        <item>Medellín - Antioquia</item>
        <item>Melgar - Tolima</item>
        <item>Montería - Córdoba</item>
        <item>Neiva - Huila</item>
        <item>Ocaña - Norte de Santander</item>
        <item>Paipa - Boyacá</item>
        <item>Palmira - Valle del Cauca</item>
        <item>Pamplona - Norte de Santander</item>
        <item>Pasto - Nariño</item>
        <item>Pereira - Risaralda</item>
        <item>Piedecuesta - Santander</item>
        <item>Pitalito - Huila</item>
        <item>Popayán - Cauca</item>
        <item>Quibdó - Choco</item>
        <item>Riohacha - Guajira</item>
        <item>Rionegro - Antioquia</item>
        <item>Sabanalarga - Atlántico</item>
        <item>Sahagún - Córdoba</item>
        <item>San Andrés Isla</item>
        <item>Santa Marta - Magdalena</item>
        <item>Sincelejo - Sucre</item>
        <item>Soacha - Cundinamarca</item>
        <item>Sogamoso - Boyacá</item>
        <item>Soledad - Atlántico</item>
        <item>Tibú - Norte de Santander</item>
        <item>Tuluá - Valle del Cauca</item>
        <item>Tumaco - Nariño</item>
        <item>Tunja - Boyacá</item>
        <item>Turbo - Antioquia</item>
        <item>Valledupar - Cesar</item>
        <item>Villa de leyva</item>
        <item>Villa del Rosario - Norte de Santander</item>
        <item>Villavicencio - Meta</item>
        <item>Yopal - Casanare</item>
        <item>Yumbo - Valle del Cauca</item>
        <item>Zipaquirá - Cundinamarca</item>

    </string-array>

</resources>
