<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:orientation="vertical">


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal">

                <TextView
                    android:text="@string/nombre"
                    style="@style/Textviewtitulo"
                    android:layout_weight="1.8"/>

                <EditText
                    style="@style/Edittext"
                    android:hint="@string/hint_nombre"
                    android:inputType="textPersonName"
                    android:layout_weight="1"
                    android:id="@+id/eNombre"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="horizontal"
                android:layout_weight="1">

                <TextView
                    style="@style/Textviewtitulo"
                    android:text="@string/correo"
                    android:layout_weight="1.8"/>

                <EditText
                    style="@style/Edittext"
                    android:hint="@string/hint_correo"
                    android:inputType="textEmailAddress"
                    android:layout_weight="1"
                    android:id="@+id/eCorreo"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    style="@style/Textviewtitulo"
                    android:text="@string/tel"
                    android:layout_weight="1.8"/>

                <EditText
                    style="@style/Edittext"
                    android:hint="@string/hint_tel"
                    android:inputType="phone"
                    android:layout_weight="1"
                    android:id="@+id/eTel"/>
            </LinearLayout>

            <TextView
                android:text="@string/genero"
                style="@style/Textviewtitulo"/>


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    style="@style/Radiobutton"
                    android:text="@string/masculino"
                    android:id="@+id/rmasc"/>

                <RadioButton
                    style="@style/Radiobutton"
                    android:text="@string/femenino"
                    android:id="@+id/rfem"/>

            </RadioGroup>

            <TextView
                style="@style/Textviewtitulo"
                android:text="@string/ciudad"/>

            <Spinner
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/sciudad">

            </Spinner>

            <TextView
                style="@style/Textviewtitulo"
                android:text="@string/hobbies"/>

            <CheckBox
                style="@style/Radiobutton"
                android:text="@string/hobby1"
                android:id="@+id/hobby1"/>
            <CheckBox
                style="@style/Radiobutton"
                android:text="@string/hobby2"
                android:id="@+id/hobby2"/>
            <CheckBox
                style="@style/Radiobutton"
                android:text="@string/hobby3"
                android:id="@+id/hobby3"/>
            <CheckBox
                style="@style/Radiobutton"
                android:text="@string/hobby4"
                android:id="@+id/hobby4"/>

            <TextView
                style="@style/Textviewtitulo"
                android:text="@string/fecha"
                />

            <DatePicker
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:id="@+id/datef"
                >
            </DatePicker>

            <Button
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:text="@string/boton"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:id="@+id/boton"/>

            <TextView
                style="@style/Textviewmuestra"
                android:text="@string/nombre"
                android:id="@+id/tNombre"/>

            <TextView
                style="@style/Textviewmuestra"
                android:text="@string/correo"
                android:id="@+id/tCorreo"/>

            <TextView
                style="@style/Textviewmuestra"
                android:text="@string/tel"
                android:id="@+id/tTel"/>

            <TextView
                style="@style/Textviewmuestra"
                android:text="@string/genero"
                android:id="@+id/tGenero"/>

            <TextView
                style="@style/Textviewmuestra"
                android:text="@string/ciudad"
                android:id="@+id/tCiudad"/>

            <TextView
                style="@style/Textviewmuestra"
                android:text="@string/hobbies"
                android:id="@+id/tHobbies"/>

            <TextView
                style="@style/Textviewmuestra"
                android:text="@string/fecha"
                android:id="@+id/tFecha"/>



            </LinearLayout>

    </ScrollView>


</LinearLayout>


